[project]
name = "3mystic_common"
dynamic = ["version"]
authors = [
  { name="Ron Truex" },
]
description = "Common Library for for various tool sets"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "colorama; platform_system == 'Windows'",
  "asyncio >= 3.4.3",
  "python-dateutil >= 2.8.2",
  "openpyxl >= 3.0.9",
  "pycryptodomex >= 3.14.1",
  "requests >= 2.27.1",
  "boto3 >= 1.21.41",
  "hvac >= 1.0.2",
  "pyhcl >= 0.4.4",
  "cryptography >= 38.0.3",
  "typing-extensions >= 4.4.0"
]

[template.licenses]
headers = true
default = [
  "MIT",
]

[project.urls]
"Homepage" = "https://github.com/3MysticApes/3mystic_common"
"Bug Tracker" = "https://github.com/3MysticApes/3mystic_common/issues"

[project.scripts]
3mystic_common = "3mystic_common.cli:main"

[tool.ruff.isort]
known-first-party = ["3mystic_common"]

[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true


[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
source_pkgs = ["3mystic_common", "tests"]
omit = [
  "src/3mystic_common/__main__.py",
]

[tool.hatch.version]
path = "src/3mystic_common/__version__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
only-include = ["tests", "dist"]
packages = ["src/3mystic_common"]

[tool.hatch.build.sources]
"src/3mystic_common" = "3mystic_common"